cmake_minimum_required(VERSION 4.1)

set(PROJECT_NAME MYAPP)
project(
  ${PROJECT_NAME}
  VERSION 0.1
  LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

find_package(Qt6 REQUIRED COMPONENTS Widgets)
qt_standard_project_setup()
#[[ 显式开启自动资源编译 ]]
#[[ set(CMAKE_AUTORCC ON) ]]

set(CPP ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/src/widget.cpp)
set(H ${CMAKE_CURRENT_SOURCE_DIR}/include/widget.h)
set(UI ${CMAKE_CURRENT_SOURCE_DIR}/ui/widget.ui)
set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_CURRENT_SOURCE_DIR}/ui)
#[[ set(RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/resources/res.qrc) ]]

qt_add_executable(${PROJECT_NAME} ${CPP} ${H} ${UI} #[[ ${RESOURCES} ]])

target_include_directories(${PROJECT_NAME}
                           PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)

#[[ link a Widgets of Qt6 ]]
target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)

set_target_properties(
  ${PROJECT_NAME}
  PROPERTIES MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
             MACOSX_BUNDLE_SHORT_VERSION_STRING
             ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
             MACOSX_BUNDLE TRUE
             WIN32_EXECUTABLE FALSE)

include(GNUInstallDirs)
install(
  TARGETS ${PROJECT_NAME}
  BUNDLE DESTINATION .
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
